# wirestead

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  README.md  annotated.html  annotated_dup.js  auto__initializer_8cc_source.html  auto__initializer_8hpp_source.html  base_2reconnect__decider_8hpp_source.html  boost__serial__port_8hpp_source.html  boost__tcp__acceptor_8cc_source.html  boost__tcp__acceptor_8hpp_source.html  boost__tcp__socket_8cc_source.html  boost__tcp__socket_8hpp_source.html  boost__uds__acceptor_8cc_source.html  boost__uds__acceptor_8hpp_source.html  boost__uds__socket_8cc_source.html  boost__uds__socket_8hpp_source.html  bp__state__machine_8hpp_source.html  bp__utils_8hpp_source.html  channel_8cc_source.html  channel_8hpp_source.html  channel__factory_8cc_source.html  channel__factory_8hpp_source.html  classes.html  classunilink_1_1base_1_1PlatformInfo-members.html  classunilink_1_1base_1_1PlatformInfo.html  classunilink_1_1base_1_1PlatformInfo.js  classunilink_1_1base_1_1PlatformInfo__coll__graph.map  classunilink_1_1base_1_1PlatformInfo__coll__graph.md5  classunilink_1_1builder_1_1AutoInitializer-members.html  classunilink_1_1builder_1_1AutoInitializer.html  classunilink_1_1builder_1_1AutoInitializer.js  classunilink_1_1builder_1_1AutoInitializer__coll__graph.map  classunilink_1_1builder_1_1AutoInitializer__coll__graph.md5  classunilink_1_1builder_1_1BuilderInterface-members.html  classunilink_1_1builder_1_1BuilderInterface.html  classunilink_1_1builder_1_1BuilderInterface.js  (+1117 more)
assets/: README.md
cmake/: UnilinkConfig.cmake.in  UnilinkDependencies.cmake  UnilinkOptions.cmake  UnilinkPackaging.cmake  WiresteadCompiler.cmake  WiresteadConfig.cmake.in  WiresteadDependencies.cmake  WiresteadOptions.cmake  WiresteadPackaging.cmake  WiresteadSources.cmake  WiresteadTargets.cmake  unilink.pc.in  wirestead.pc.in
coverage/: index-original.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
docs/: README.md  api_stability.md  callbacks.md  error_model.md  installation.md  migration-from-unilink.md  performance_validation.md  quickstart.md  release_checklist.md  security.md
scripts/: run_benchmarks.sh  verify.sh  verify_installed_consumer.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  (+76 more)
test/: CMakeLists.txt  README.md
test/e2e/: CMakeLists.txt
test/e2e/scenarios/: test_architecture.cc  test_error_recovery.cc
test/e2e/stress/: test_stress.cc
test/integration/: CMakeLists.txt
test/integration/builder/: test_builder_integration.cc
test/integration/core/: test_core_integrated.cc  test_safety_integrated.cc  test_stable_integration.cc
test/integration/serial/: test_serial_builder_validation.cc  test_serial_loopback.cc  test_serial_timeout.cc
test/integration/tcp/: test_client_limit_integration.cc  test_dos_protection.cc  test_integration.cc  test_multithread_backpressure.cc  test_simple_server.cc  test_start_stop_stress.cc  test_stop_contract.cc  test_stop_from_callback.cc  test_tcp_abort.cc  test_tcp_cancel.cc  test_tcp_flood.cc  test_tcp_nodelay_default.cc  test_tcp_server_chaos.cc
test/integration/transport/: test_backpressure_strategy.cc  test_contract_compliance.cc  test_tcp_client_lifecycle.cc  test_tcp_server_connectivity.cc  test_try_write_contract.cc  test_udp_large_payload_transport.cc  transport_tcp_client.cc  transport_tcp_client_policy.cc  transport_tcp_server.cc  transport_tcp_server_security_test.cc  transport_udp.cc  transport_udp_extended.cc  transport_uds_error_test.cc  transport_uds_server_security_test.cc
test/integration/uds/: test_uds_integration.cc
test/integration/wrapper/: test_send_contract.cc  test_server_broadcast_contract.cc  test_server_broadcast_slow_consumer_contract.cc  test_tcp_client_error_mapping.cc  test_tcp_client_wrapper_lifecycle.cc  test_tcp_server_wrapper_lifecycle.cc  test_udp_callback_race_stress.cc  test_udp_client_wrapper_lifecycle.cc  test_udp_failure.cc  test_udp_large_payload_receive.cc  test_udp_options.cc  test_udp_server_wrapper_lifecycle.cc  test_udp_server_wrapper_transport.cc  test_udp_state.cc  test_udp_stop_lifecycle.cc  test_uds_wrapper_lifecycle.cc
test/mocks/: dependency_injection.hpp  mock_tcp_socket.hpp  mock_test_helpers.hpp  mock_uds_acceptor.hpp  mock_uds_socket.hpp  testable_tcp_client.hpp
test/unit/: CMakeLists.txt
test/unit/builder/: test_builder.cc  test_builder_option_wiring.cc  test_udp_builder_options.cc  test_uds_builder_options.cc
test/unit/common/: test_boundary.cc  test_core.cc  test_error_codes_to_string.cc  test_error_handler.cc  test_error_mapping.cc  test_error_mapping_edge_cases.cc  test_error_mapping_exhaustive.cc  test_input_validator.cc  test_input_validator_edge.cc  test_io_context_manager_lifecycle.cc  test_legacy_compat.cc  test_logger_behaviors.cc  test_memory.cc  test_memory_pool_edge_cases.cc  test_memory_tracker_and_buffer.cc  test_pool_stress.cc  test_pooled_buffer.cc
test/unit/config/: test_config.cc  test_config_failure.cpp  test_config_security.cc
test/unit/diagnostics/: test_runtime_stats_counter.cc
test/unit/framer/: test_line_framer.cc  test_packet_framer.cc
test/unit/memory/: test_pool_limits.cc
test/unit/transport/: fake_tcp_socket.hpp  test_bp_state_machine.cc  test_error_info_holder.cc  test_reconnect_decider.cc  test_tcp_abort.cc  test_udp_error.cc  transport_serial.cc  transport_tcp_client_reconnect_test.cc  transport_tcp_fuzz_test.cc  transport_tcp_server_session.cc  transport_tcp_timeout_test.cc  transport_uds_client.cc  transport_uds_server.cc  transport_uds_session_lifecycle.cc
test/unit/wrapper/: test_error_context_builder.cc  test_runtime_stats.cc  test_send_buffer_apis.cc  test_serial_config_mapping.cc  test_serial_fail.cc  test_serial_wrapper_lifecycle.cc  test_serial_wrapper_options.cc
test/utils/: contract_utils.hpp  test_constants.hpp  test_utils.hpp  wrapper_contract_test_utils.hpp
(+730 files in other folders)
